--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <body>
    
     <div class="container">
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
+      <div class="box b1">1</div>
+      <div class="box b2">2</div>
+      <div class="box b3">3</div>
     </div>
   </body>
 </html>
