--- a/index2.html
+++ b/index2.html
@@ -10,9 +10,11 @@
 <body>
     <div class="container">
         <div class="box big-box">1</div>
-        <div class="box small-box">2</div>
-        <div class="box small-box">3</div>
-        <div class="box small-box">4</div>
+        <div class="display-wrapper">
+            <div class="box small-box">2</div>
+            <div class="box small-box">3</div>
+            <div class="box small-box">4</div>
+        </div>
     </div>
 </body>
 </html>
